--- a/src/index.css
+++ b/src/index.css
@@ -181,6 +181,7 @@ body {
     background-color: #f4f4f4;
     display: flex;
     justify-content: space-around;
+    z-index: 1;
 }
 
 /* Display component*/
